--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,59 @@
-# Compiled class file
-*.class
-
-# Log file
+### Maven ###
+/target/
+/pom.xml.tag
+/pom.xml.releaseBackup
+/pom.xml.versionsBackup
+/logs
 *.log
+*.tmp
 
-# BlueJ files
-*.ctxt
+### Spring Boot ###
+# Arquivo de configuração local
+application*.yml
+application*.yaml
+application*.properties
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+### IntelliJ IDEA ###
+.idea/
+*.iml
+*.ipr
+*.iws
+out/
 
-# Package Files #
+### Eclipse ###
+.project
+.classpath
+.settings/
+bin/
+*.launch
+
+### VS Code ###
+.vscode/
+.history/
+
+### Sistema Operacional ###
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Windows
+Thumbs.db
+ehthumbs.db
+desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+
+### Arquivos de build ###
+*.class
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+### Testes/Relatórios ###
+/surefire-reports/
+/failsafe-reports/
+*.swp
+*.swo
