--- a/sistemaDePagamento/src/main/resources/application-dev.properties
+++ b/sistemaDePagamento/src/main/resources/application-dev.properties
@@ -4,3 +4,14 @@ spring.datasource.username=adminuser
 spring.datasource.password=password123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+jwt.secret=${JWT_SECRET}]
